--- a/js1.html
+++ b/js1.html
@@ -2,16 +2,10 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<title>JS 1</title>
+<title>js1</title>
 </head>
-	<p id="id1">第一段文字</p>
-	<p id="id2">第二段文字</p>
-	
-	<script type="text/javascript">
-		document.write("hello");
-		document.getElementById("id1").style.color="blue";
-	</script>
 <body>
-
+<script src="js1.js">	</script>	
+<input type="button" value="新窗口打开网站" onclick="open1()" />
 </body>
 </html>
