--- a/getElementById.html
+++ b/getElementById.html
@@ -11,7 +11,7 @@
 		var a=document.getElementById("con");
 		document.write("获取元素结果："+a+"<br>");		
 		document.write("原文字："+a.innerHTML+"<br>");
-		con.innerHTML="Hello World Again"
+		a.innerHTML="Hello World Again"
 		document.write("修改后文字:"+a.innerHTML+"<br>");
 	</script>
 	<p>通过DOM改变HTML样式</p>
