--- a/js-display.html
+++ b/js-display.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>JS display</title>
-	<script src='js-display.js'></script>
+	<script src="js-display.js"></script>
 	<style>
     body{ font-size:16px;}
     .one{
@@ -25,10 +25,10 @@
 
 <body>
 	<h1>Javascript</h1>
-	<p id='con'>Web 开发工程师</p>
+	<p id="con">Web 开发工程师</p>
 	<form>
-		<input type='button' onClick="hidetext()" value="隐藏内容">
-		<input type='button' onClick='showtext()' value='显示内容'>
+		<input type="button" onClick="hidetext()" value="隐藏内容">
+		<input type="button" onClick="showtext()" value="显示内容">
 	</form>
    <br/><br />
    <p style="color:red">控制类名（className 属性）:</p>
