--- a/js-display.html
+++ b/js-display.html
@@ -27,8 +27,8 @@
 	<h1>Javascript</h1>
 	<p id="con">Web 开发工程师</p>
 	<form>
-		<input type="button" onClick="hidetext()" value="隐藏内容">
-		<input type="button" onClick="showtext()" value="显示内容">
+		<input type="button" onClick="showtext()" value="显示内容" />
+		<input type="button" onClick="hidetext()" value="隐藏内容" />
 	</form>
    <br/><br />
    <p style="color:red">控制类名（className 属性）:</p>
