--- a/js-event.html
+++ b/js-event.html
@@ -9,20 +9,32 @@
 <body>
 	<form>
 		<!-- onClick单击事件 -->
-		<input type="button" onClick="openwin()" value="点击" /><br />
+		<input type="button" onClick="openwin()" value="点击" /><br /><br /><br />
 		<!-- onmouseover鼠标经过时间 -->
 		密码<input name="password" type="text" />
-		<input name="button" type="button" value="确定" onmouseover="info()" /><br />
+		<input name="button" type="button" value="确定" onmouseover="info()" /><br /><br /><br />
 		<!-- onmouseout鼠标移开事件 -->
-		<a href="http://www.imooc.com" onmouseout="message()">点击我</a><br />
+		<a href="http://www.imooc.com" onmouseout="message()">点击我</a><br /><br /><br />
 		<!-- onfocus光标聚焦事件 -->
-		<select name="career">
+		<select name="career" onfocus="message1()">
 			<option>学生</option>
 			<option>教师</option>
 			<option>工程师</option>
 			<option>演员</option>
 			<option>会计</option>
 		</select>
+		<br /><br /><br />
+		<!-- onblur失焦事件 -->
+		用户:<input name="username" type="text" value="请输入用户名">
+		密码:<input name="password" type="text" value="请输入密码" onblur="message2()">
+		<br /><br /><br />
+		<!-- onselect 内容选中事件 -->
+		个人简介：<br />
+		<textarea name="summary" cols="60" rows="5" onselect="message3()">请写入个人简介，不少于200字！</textarea>
+		<br /><br /><br />
+		<!-- onchange 文本框内容改变事件 -->
+		个人简介：<br />
+		<textarea name="summary" cols="60" rows="5" onchange="message4()">请写入个人简介！</textarea>
 	</form>
 </body>
 </html>
