--- a/js-event.html
+++ b/js-event.html
@@ -35,6 +35,28 @@
 		<!-- onchange 文本框内容改变事件 -->
 		个人简介：<br />
 		<textarea name="summary" cols="60" rows="5" onchange="message4()">请写入个人简介！</textarea>
+		<br /><br /><br />
+		<!-- onload 加载事件 -->
+		<img src="/1.jpg" onload="message5()">
+		<br /><br /><br />
+		<!-- onunload 卸载事件 -->
+		<img src="/2.jpg" onbeforeunload="message6()">
+		<a href="www.imooc.com">imooc</a>
+		<br /><br /><br />
+		
+		<!-- event 事件练习 -->
+		<input type="text" id="txt1" />
+		<select id="select">
+			<option value="+">+</option>
+			<option value="-">-</option>
+			<option value="*">*</option>
+			<option value="/">/</option>
+		</select>
+		<input type="text" id="txt2">
+		<input type="button" value="=" onClick="count()">
+		<input type="text" id="txt3" />
+		
+		<br /><br /><br />
 	</form>
 </body>
 </html>
