--- a/js-window-object.html
+++ b/js-window-object.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-<title>js object</title>
-<script src="js-object.js"></script>
+<title>window object</title>
+<script src="js-window-object.js"></script>
 </head>
 
 <body>
+<input type="text" id="clock" size="50" >
 </body>
 </html>
