js window object33

--- a/js-window-object.html
+++ b/js-window-object.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+<form>
 <input type="text" id="clock" size="50" >
+<input type="button" value="stop" onClick="clearInterval(int)">
+<br/>
+</form>
 </body>
 </html>
